<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".view.onboarding.OnboardingActivity">

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/skip"
        android:textColor="@color/soft_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_marginTop="48dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/skip_button" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2" />

    <!-- Onboarding Page 1 -->
    <ImageView
        android:id="@+id/onboarding_image_1"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/onboarding_image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/onboarding_title_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_title_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_image_1"
        app:layout_constraintStart_toStartOf="@id/onboarding_image_1"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image_1" />

    <TextView
        android:id="@+id/onboarding_message_1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_message_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/onboarding_title_1"
        app:layout_constraintStart_toStartOf="@id/onboarding_title_1"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title_1" />

    <Button
        android:id="@+id/next_button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/soft_yellow"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_message_1"
        app:layout_constraintStart_toStartOf="@id/onboarding_message_1"
        app:layout_constraintTop_toBottomOf="@id/onboarding_message_1" />

    <!-- Onboarding Page 2 -->
    <ImageView
        android:id="@+id/onboarding_image_2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/onboarding_image_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/onboarding_title_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_title_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_image_2"
        app:layout_constraintStart_toStartOf="@id/onboarding_image_2"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image_2" />

    <TextView
        android:id="@+id/onboarding_message_2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_message_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/onboarding_title_2"
        app:layout_constraintStart_toStartOf="@id/onboarding_title_2"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title_2" />

    <Button
        android:id="@+id/next_button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/soft_yellow"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_message_2"
        app:layout_constraintStart_toStartOf="@id/onboarding_message_2"
        app:layout_constraintTop_toBottomOf="@id/onboarding_message_2" />

    <!-- Onboarding Page 3 -->
    <ImageView
        android:id="@+id/onboarding_image_3"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/onboarding_image_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/onboarding_title_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_title_3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_image_3"
        app:layout_constraintStart_toStartOf="@id/onboarding_image_3"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image_3" />

    <TextView
        android:id="@+id/onboarding_message_3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_message_3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/onboarding_title_3"
        app:layout_constraintStart_toStartOf="@id/onboarding_title_3"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title_3" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/soft_yellow"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/onboarding_message_3"
        app:layout_constraintStart_toStartOf="@id/onboarding_message_3"
        app:layout_constraintTop_toBottomOf="@id/onboarding_message_3" />

</androidx.constraintlayout.motion.widget.MotionLayout>